--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -1,153 +1,98 @@
-html,
+@import url(https://fonts.googleapis.com/css?family=Roboto:300);
+
+.login-page {
+  width: 360px;
+  padding: 8% 0 0;
+  margin: auto;
+}
+.form {
+  position: relative;
+  z-index: 1;
+  background: #FFFFFF;
+  max-width: 360px;
+  margin: 0 auto 100px;
+  padding: 45px;
+  text-align: center;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+}
+.form input {
+  font-family: "Roboto", sans-serif;
+  outline: 0;
+  background: #f2f2f2;
+  width: 100%;
+  border: 0;
+  margin: 0 0 15px;
+  padding: 15px;
+  box-sizing: border-box;
+  font-size: 14px;
+}
+.form button {
+  font-family: "Roboto", sans-serif;
+  text-transform: uppercase;
+  outline: 0;
+  background: #4CAF50;
+  width: 100%;
+  border: 0;
+  padding: 15px;
+  color: #FFFFFF;
+  font-size: 14px;
+  -webkit-transition: all 0.3 ease;
+  transition: all 0.3 ease;
+  cursor: pointer;
+}
+.form button:hover,.form button:active,.form button:focus {
+  background: #43A047;
+}
+.form .message {
+  margin: 15px 0 0;
+  color: #b3b3b3;
+  font-size: 12px;
+}
+.form .message a {
+  color: #4CAF50;
+  text-decoration: none;
+}
+.form .register-form {
+  display: none;
+}
+.container {
+  position: relative;
+  z-index: 1;
+  max-width: 300px;
+  margin: 0 auto;
+}
+.container:before, .container:after {
+  content: "";
+  display: block;
+  clear: both;
+}
+.container .info {
+  margin: 50px auto;
+  text-align: center;
+}
+.container .info h1 {
+  margin: 0 0 15px;
+  padding: 0;
+  font-size: 36px;
+  font-weight: 300;
+  color: #1a1a1a;
+}
+.container .info span {
+color: #4d4d4d;
+  font-size: 12px;
+}
+.container .info span a {
+color: #000000;
+  text-decoration: none;
+}
+.container .info span .fa {
+  color: #EF3B3A;
+}
 body {
-  margin: 0;
-  height: 100%;
-  background: #1a032b;
-  overflow: hidden;
-  perspective: 10rem;
-}
-
-#canvas {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-}
-
-.fire-wrapper {
-  left: 50%;
-  position: absolute;
-  top: 50%;
-  transform-origin: top center;
-  transform: translate(-50%, 0) rotate3d(1, 0, 0, 60deg);
-  width: 3.5rem;
-}
-
-.fire {
-  animation: whoosh 1s linear infinite both;
-  width: 100%;
-}
-
-@keyframes whoosh {
-  from {
-    transform: translateY(-25%);
-  }
-  to {
-    transform: translateY(0);
-  }
-}
-
-.rain {
-  position: absolute;
-  width: 1rem;
-  height: 10rem;
-  background: #ffffff;
-  border-radius: 20%;
-  opacity: 0.2;
-  z-index: -1;
-}
-
-.drop {
-  width: 1rem;
-  height: 7rem;
-  background: #ffffff;
-  position: absolute;
-  border-radius: 20%;
-  opacity: 0.2;
-}
-
-.rain1 {
-  left: 5rem;
-  top: 2rem;
-  animation: raining 2s linear infinite both;
-}
-
-.rain2 {
-  left: 15rem;
-  top: 10rem;
-  animation: raining 3s linear infinite both;
-}
-
-.drop2 {
-  top: 12rem;
-  animation: raining 4s linear infinite both -2s;
-}
-
-.rain3 {
-  left: 5rem;
-  top: 35rem;
-  animation: raining 3s linear infinite both;
-}
-
-.rain4 {
-  right: 23rem;
-  top: 6rem;
-  animation: raining 4s linear infinite both;
-}
-
-.rain5 {
-  left: 25rem;
-  top: 47rem;
-  animation: raining 3s linear infinite both -3s;
-}
-
-.drop5 {
-  top: -6rem;
-  animation: raining 2s linear infinite both;
-}
-
-.rain6 {
-  right: 10rem;
-  top: 34rem;
-  animation: raining 3s linear infinite both;
-}
-
-.rain7 {
-  left: 34rem;
-  top: 10rem;
-  animation: raining 2s linear infinite both -5s;
-}
-
-.rain8 {
-  right: 25rem;
-  top: 40rem;
-  animation: raining 3s linear infinite both;
-}
-
-.drop8 {
-  top: -7rem;
-  animation: raining 4s linear infinite both -6s;
-}
-
-.rain9 {
-  right: 5rem;
-  top: 15.5rem;
-  animation: raining 3s linear infinite both;
-}
-
-.rain10 {
-  left: 24rem;
-  top: -4rem;
-  animation: raining 2s linear infinite both -3s;
-}
-
-.drop11 {
-  right: 17rem;
-  top: 20rem;
-  animation: raining 3s linear infinite both;
-}
-
-.drop12 {
-  right: 15rem;
-  top: 50rem;
-  animation: raining 4s linear infinite both -1s;
-}
-
-@keyframes raining {
-  from {
-    transform: translateY(-1200px);
-  }
-  to {
-    transform: translateY(869px);
-  }
+  background: #76b852; /* fallback for old browsers */
+  background: rgb(141,194,111);
+  background: linear-gradient(90deg, rgba(141,194,111,1) 0%, rgba(118,184,82,1) 50%);
+  font-family: "Roboto", sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;      
 }
