--- a/src/app/views/index/index.phtml
+++ b/src/app/views/index/index.phtml
@@ -261,6 +261,9 @@ const main = () => {
 main();
 
 </script>
+
+<?php $this->partial('layouts/header'); ?>
+
 <!--Recreated southernshotty's rocket cartoon. See: https://www.youtube.com/watch?v=wMBu4ctUxn8-->
 <div class="fire-wrapper">
   <img class="fire" src="https://www.stivaliserna.com/assets/rocket/fire.svg" />
