--- a/src/app/views/request/index.phtml
+++ b/src/app/views/request/index.phtml
@@ -1,3 +1,5 @@
+<?php $this->partial('layouts/header'); ?>
+
 <?php
 
 use Phalcon\Http\Request;
@@ -5,3 +7,4 @@ use Phalcon\Http\Request;
 $request = new Request();
 $email = $request->getQuery('user');
 echo '<pre>'; var_dump( $email ); echo '</pre>';
+?>
