--- a/src/app/views/login/index.phtml
+++ b/src/app/views/login/index.phtml
@@ -90,7 +90,7 @@
       color: #EF3B3A;
     }
     body {
-      background: #76b852; /* fallback for old browsers */
+      background: #76b852; fallback for old browsers
       background: rgb(141,194,111);
       background: linear-gradient(90deg, rgba(141,194,111,1) 0%, rgba(118,184,82,1) 50%);
       font-family: "Roboto", sans-serif;
@@ -98,6 +98,11 @@
       -moz-osx-font-smoothing: grayscale;      
     }
 </style>
+
+
+<?php $this->partial('layouts/header'); ?>
+
+
 <div class="login-page">
   <div class="form">
 
