--- a/src/app/views/layouts/header.phtml
+++ b/src/app/views/layouts/header.phtml
@@ -37,15 +37,16 @@
 </style>
 
 <head>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
-  <div class="navbar">
-    <a href="/"><i class="fa fa-home"></i></a>
-    <a href="/login"><i class="fa fa-user"></i></a>
-    <a href="/request"><i class="fa fa-opencart"></i></a>
-    <a href="/response"><i class="fa fa-info"></i></a>
-    <a href=""><i class="fa fa-star"></i></a>
-    <a href="/config/show"><i class="fa fa-list"></i></a>
-    <a href="/users"><i class="fa fa-clipboard"></i></a>
-  </div>
+<div class="navbar">
+  <a href="/"><i class="fa fa-home"></i></a>
+  <a href="/login"><i class="fa fa-user"></i></a>
+  <a href="/request"><i class="fa fa-opencart"></i></a>
+  <a href="/response"><i class="fa fa-info"></i></a>
+  <a href=""><i class="fa fa-star"></i></a>
+  <a href="/config/show"><i class="fa fa-list"></i></a>
+  <a href="/users"><i class="fa fa-clipboard"></i></a>
+</div>
