--- a/src/app/views/session/index.phtml
+++ b/src/app/views/session/index.phtml
@@ -3,12 +3,12 @@
 // use Phalcon\Session\Manager;
 // use Phalcon\Session\Adapter\Stream;
 
-// $session = new Manager();
-// $files = new Stream(
-//     [
-//         'savePath' => '/tmp',
-//     ]
-// );
+$session = new Manager();
+$files = new Stream(
+    [
+        'savePath' => '/tmp',
+    ]
+);
 
 
 // $session
