--- a/src/app/views/login/index.phtml
+++ b/src/app/views/login/index.phtml
@@ -108,17 +108,17 @@
 
     <form class="register-form" method="post" action="/login/register">
       <input required="required" type="text" name="formdata[name]" placeholder="name"/>
-      <input required="required" type="text" name="formdata[email]" placeholder="email address"/>
-      <input required="required" type="password" name="formdata[pass]" placeholder="password"/>
-      <input required="required" type="password" name="formdata[cpass]" placeholder="confirm password"/>
+      <input required="required" type="email" name="formdata[email]" placeholder="email address"/>
+      <input required="required" type="password" class="reg_pass" name="formdata[pass]" placeholder="password"/>
+      <input required="required" type="password" class="reg_confirm_pass" name="formdata[cpass]" placeholder="confirm password"/>
       <button type="submit">create</button>
       <p class="message">Already registered? <a href="#">Sign In</a></p>
     </form>
     
     <form class="login-form" method="post" action="/login/validate">
-      <input required="required" type="text" name="formdata[name]" placeholder="username"/>
+      <input required="required" type="email" name="formdata[email]" placeholder="email address"/>
       <input required="required" type="password" name="formdata[pass]" placeholder="password"/>
-      <button>login</button>
+      <button type="submit">login</button>
       <p class="message">Not registered? <a href="#">Create an account</a></p>
     </form>
 
@@ -127,6 +127,17 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script>
     $('.message a').click(function(){
-    $('form').animate({height: "toggle", opacity: "toggle"}, "slow");
+      $('form').animate({height: "toggle", opacity: "toggle"}, "slow");
+    });
+
+    $( '.register-form' ).on( 'submit', function(evnt) {
+       if ( $( '.reg_pass' ).val() !== $( '.reg_confirm_pass' ).val() ) {
+        evnt.preventDefault();
+        Swal.fire({
+          icon: 'error',
+          title: 'Oops...',
+          text: 'Password do not match!',
+        })
+       }
     });
 </script>
