login logout implemented

--- a/src/app/views/users/index.phtml
+++ b/src/app/views/users/index.phtml
@@ -129,9 +129,15 @@
     foreach ($users as $user) {
         break;
     }
-?>
 
+   if ( empty( $user ) ) {
+     echo "<h1>User Not Logged in</h1>";
+     return;
+   }
+
+?>
 <div class='container'>
+<a href = "/users/logout">Logout</a>
   <div class='avatar'>
     <img src='https://previews.123rf.com/images/djvstock/djvstock1508/djvstock150806893/44095667-web-developer-design-vector-illustration-eps-10-.jpg?format=auto&amp;version=1638034680&amp;width=300&amp;height=300'>
   </div>
